--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="dist/styles/style.css">
     <title>Welcome to postIt! Please Log In</title>
 </head>
 <body>
@@ -42,15 +42,14 @@
                     <input type="email" name="email"
                         class="form-input" id="email-input" 
                         placeholder="   Email" autocomplete="off" 
-                        autofocus>      <!-- For testing, email is: name@mail.com -->
+                        autofocus>
 
                     <!-- password input -->
                     <input type="password" name="password" 
                         class="form-input" id="password-input" 
                         placeholder="   Password" autocomplete="new-password">
-                                        <!-- For testing, password is: 1234 -->
 
-                    <button type="submit" id="login-button">Log In</button>
+                    <button type="submit" id="login-button" onclick="location.href='dist/html/main.html'">Log In</button>
 
                     <p class="smaller">
                         <a href="#">Forgot password?</a>
@@ -60,8 +59,5 @@
             </div>
         </div>
     </section>
-
-    <script src="../scripts/login.js"></script>
-
 </body>
 </html>
